--- a/EJClient/MainWindow.xaml
+++ b/EJClient/MainWindow.xaml
@@ -6,6 +6,8 @@
     <Window.Resources>
         <ContextMenu x:Key="treeMenu_Database">
             <MenuItem Header="新建数据库..." Click="MenuItem_创建数据库_Click_1"></MenuItem>
+            <Separator></Separator>
+            <MenuItem Header="从.cs文件还原设计模型..." Click="MenuItem_cs文件还原设计模型_Click_1"></MenuItem>
             <!--<MenuItem Header="从config文件导入..." Click="MenuItem_从config文件导入_Click_1"></MenuItem>-->
         </ContextMenu>
         <ContextMenu x:Key="treeMenu_databaseItem">
@@ -18,6 +20,7 @@
             <MenuItem Header="导入数据..." Click="MenuItem_导入数据_Click_1"></MenuItem>
             <Separator></Separator>
             <MenuItem Header="从其他数据库导入表结构..." Click="MenuItem_从其他数据库导入表结构_Click_1"></MenuItem>
+          
             <Separator></Separator>
             <MenuItem Header="移除" Click="MenuItem_移除数据库_Click_1"></MenuItem>
             <Separator></Separator>
