--- a/EJClient/Forms/DBTableEditor.xaml
+++ b/EJClient/Forms/DBTableEditor.xaml
@@ -31,7 +31,7 @@
                                 <Grid x:Name="main_panel" Margin="-15,0,0,0" Width="286">
                                     <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}"></CheckBox>
                                     <TextBlock x:Name="main_text" Margin="20,0,0,0" VerticalAlignment="Top" HorizontalAlignment="Stretch" TextAlignment="Right" Text="{Binding showCaption}"></TextBlock>
-                                    <TextBlock x:Name="main_text2" Margin="20,0,0,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"  TextAlignment="Left" Text="{Binding Name}"></TextBlock>
+                                    <TextBlock x:Name="main_text2" Margin="20,0,0,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"  TextAlignment="Left" Text="{Binding ShowInLeft}"></TextBlock>
                                     
                                     <!--<Grid.ToolTip>
                                         <TextBlock VerticalAlignment="Center" Text="{Binding caption}" TextWrapping="Wrap" MaxWidth="200" ></TextBlock>
