--- a/EJClient/Forms/DBTableEditor.xaml
+++ b/EJClient/Forms/DBTableEditor.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:EJClient.Forms" x:Class="EJClient.Forms.DBTableEditor"
-        Title="DBTableEditor" WindowStartupLocation="CenterOwner" Height="600" Width="800">
+        Title="DBTableEditor" WindowStartupLocation="CenterOwner" Height="600" Width="900">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -15,7 +15,7 @@
             <TabItem x:Name="columnTab" Header="Columns">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="300"></ColumnDefinition>
+                        <ColumnDefinition Width="auto"></ColumnDefinition>
                         <ColumnDefinition Width="50"></ColumnDefinition>
                         <ColumnDefinition Width="*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
@@ -28,13 +28,13 @@
                         </TreeView.ItemContainerStyle>
                         <TreeView.ItemTemplate>
                             <HierarchicalDataTemplate >
-                                <Grid x:Name="main_panel" Margin="-15,0,0,0" Width="286">
+                                <Grid x:Name="main_panel" Margin="-15,0,0,0" Width="{Binding ShowWidth}">
                                     <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}"></CheckBox>
-                                    <TextBlock x:Name="main_text" Margin="20,0,0,0" VerticalAlignment="Top" HorizontalAlignment="Stretch" TextAlignment="Right" Text="{Binding showCaption}"></TextBlock>
+                                    <TextBlock x:Name="main_text" FontSize="12" Margin="20,0,10,0" VerticalAlignment="Top" HorizontalAlignment="Stretch" TextAlignment="Right" Text="{Binding showCaption}"></TextBlock>
                                    
                                     <StackPanel Orientation="Horizontal" Margin="20,0,0,0" VerticalAlignment="Top">
-                                        <TextBlock TextAlignment="Left" Foreground="#2b91af" FontWeight="Bold" Text="{Binding ShowInLeft}"></TextBlock>
-                                        <TextBlock x:Name="main_text2"  TextAlignment="Left" Text="{Binding Name}"></TextBlock>
+                                        <TextBlock TextAlignment="Left" FontSize="12" Foreground="#2b91af" FontWeight="Bold" Text="{Binding ShowInLeft}"></TextBlock>
+                                        <TextBlock x:Name="main_text2"  FontSize="12" TextAlignment="Left" Text="{Binding Name}"></TextBlock>
                                     </StackPanel>
                                     
                                     <!--<Grid.ToolTip>
