--- a/EJClient/MainWindow.xaml
+++ b/EJClient/MainWindow.xaml
@@ -14,6 +14,7 @@
 
             <MenuItem Header="生成数据库模型代码..." Click="MenuItem_生成数据库模型代码_Click_1"></MenuItem>
             <MenuItem Header="生成简单模型代码..." Click="MenuItem_生成简单模型代码_Click_1"></MenuItem>
+            <MenuItem Header="生成最简化模型代码..." Click="MenuItem_生成最简化模型代码_Click_1"></MenuItem>
             <!--<MenuItem Header="导出结构脚本..." Click="MenuItem_导出更新_Click_1"></MenuItem>-->
             <Separator></Separator>
             <MenuItem Header="导出数据..." Click="MenuItem_导出数据_Click_1"></MenuItem>
